@@ -7,12 +7,12 @@
 
 m4_define([VERSION_MAJOR],[1])
 m4_define([VERSION_MINOR],[0])
-m4_define([VERSION_MICRO],[12])
+m4_define([VERSION_MICRO],[13])
 
 AC_INIT(memproxy, m4_defn([VERSION_MAJOR]).m4_defn([VERSION_MINOR]).m4_defn([VERSION_MICRO]), [], memproxy)
 
 MEMPROXY_CURRENT=1
-MEMPROXY_REVISION=12
+MEMPROXY_REVISION=13
 MEMPROXY_AGE=0
 # 1.0.0 had 1:0:0
 # 1.0.1 had 1:1:0
@@ -27,6 +27,7 @@ MEMPROXY_AGE=0
 # 1.0.10 had 1:10:0
 # 1.0.11 had 1:11:0
 # 1.0.12 had 1:12:0
+# 1.0.13 had 1:13:0
 
 #   Current  -- the number of the binary API that we're implementing
 #   Revision -- which iteration of the implementation of the binary
@@ -65,6 +66,7 @@ m4_include([acinclude/ax_cxx_namespaces.m4])
 m4_include([acinclude/ax_cxx_have_stl.m4])
 m4_include([acinclude/ax_compiler_vendor.m4])
 m4_include([acinclude/ax_check_compile_flag.m4])
+m4_include([acinclude/ax_check_library.m4])
 
 dnl Detect the canonical host and target build environment
 AC_CANONICAL_HOST
@@ -149,12 +151,8 @@ if test x"$ac_cv_lto_supported" = xno; then
   AC_MSG_NOTICE([LTO/Link optimization not supported])
 fi
 
-dnl Checks for header files.
-AC_CHECK_HEADERS([dlfcn.h], [], [],
-     [[#ifdef HAVE_DLFCN_H
-     # include <dlfcn.h>
-     #endif
-     ]])
+dnl Check libdl and header
+AX_CHECK_LIBRARY([LIBDL], [dlfcn.h], [dl], [LDFLAGS="$LDFLAGS -ldl"], [AC_MSG_NOTICE([libdl not found])])
 
 AC_SUBST(AM_CXXFLAGS)
 AC_SUBST(AM_LDFLAGS)
