@@ -55,3 +55,7 @@ IMPROVEMENT: Refactoring - removed unnesessary code.
 08-11-2023
 ==========
 IMPROVEMENT: Refactoring - functions pointers types grouped in FunctionsPtrTypes class.
+
+08-21-2023
+==========
+IMPROVEMENT: Added check libdl and set if found.
